--- a/Gopaddi/Main.storyboard
+++ b/Gopaddi/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XBa-S8-FsA">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -40,6 +40,97 @@
             </objects>
             <point key="canvasLocation" x="6058" y="-979"/>
         </scene>
+        <!--OnboardingVC-->
+        <scene sceneID="UXI-dH-AQY">
+            <objects>
+                <viewController storyboardIdentifier="OnboardingVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="XBa-S8-FsA" customClass="OnboardingVC" customModule="Gopaddi" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="D64-H4-1VJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3NL-ir-bxE">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="ADe-6g-7OP">
+                                    <size key="itemSize" width="343" height="772"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="lyX-Mf-IAl">
+                                        <rect key="frame" x="0.0" y="20" width="343" height="772"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="T4M-16-aTG">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="772"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="343" height="772"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="z6f-6y-eXb">
+                                <rect key="frame" x="129.66666666666666" y="493" width="116" height="26"/>
+                                <color key="pageIndicatorTintColor" red="0.52549019610000003" green="0.71764705880000002" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="currentPageIndicatorTintColor" red="0.050980392159999999" green="0.43137254899999999" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="imB-UQ-uzW">
+                                <rect key="frame" x="40" y="533" width="295" height="56"/>
+                                <color key="backgroundColor" red="0.90588235289999997" green="0.94117647059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="sbU-Jc-D2t"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Create Account"/>
+                                <connections>
+                                    <action selector="CreateButton:" destination="vdT-Yp-y8W" eventType="touchUpInside" id="7Af-4O-OBV"/>
+                                    <action selector="createButton:" destination="XBa-S8-FsA" eventType="touchUpInside" id="0d5-PL-4qb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M4b-nq-rDE">
+                                <rect key="frame" x="40" y="606" width="295" height="56"/>
+                                <color key="backgroundColor" red="0.1137254902" green="0.14117647059999999" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="qMM-QK-w34"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Login">
+                                    <color key="baseForegroundColor" red="0.90588235289999997" green="0.94117647059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="LoginButton:" destination="vdT-Yp-y8W" eventType="touchUpInside" id="tMy-KO-ppm"/>
+                                    <action selector="loginButton:" destination="XBa-S8-FsA" eventType="touchUpInside" id="WaE-9h-tiL"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="pBJ-dQ-g7I"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="M4b-nq-rDE" firstAttribute="leading" secondItem="imB-UQ-uzW" secondAttribute="leading" id="0ho-m2-FgM"/>
+                            <constraint firstItem="M4b-nq-rDE" firstAttribute="centerX" secondItem="D64-H4-1VJ" secondAttribute="centerX" id="2AY-ak-QqW"/>
+                            <constraint firstItem="z6f-6y-eXb" firstAttribute="centerY" secondItem="D64-H4-1VJ" secondAttribute="centerY" constant="100" id="30k-Rb-wAZ"/>
+                            <constraint firstItem="M4b-nq-rDE" firstAttribute="trailing" secondItem="imB-UQ-uzW" secondAttribute="trailing" id="3Du-v1-zpk"/>
+                            <constraint firstAttribute="bottom" secondItem="3NL-ir-bxE" secondAttribute="bottom" id="3mj-hr-KSD"/>
+                            <constraint firstItem="imB-UQ-uzW" firstAttribute="leading" secondItem="pBJ-dQ-g7I" secondAttribute="leading" constant="40" id="4XX-36-hlj"/>
+                            <constraint firstItem="imB-UQ-uzW" firstAttribute="top" secondItem="z6f-6y-eXb" secondAttribute="bottom" constant="14" id="QPk-aN-0MX"/>
+                            <constraint firstItem="M4b-nq-rDE" firstAttribute="top" secondItem="imB-UQ-uzW" secondAttribute="bottom" constant="17" id="RSZ-Mz-Ueu"/>
+                            <constraint firstItem="z6f-6y-eXb" firstAttribute="centerX" secondItem="D64-H4-1VJ" secondAttribute="centerX" id="Sp1-be-Cdm"/>
+                            <constraint firstItem="pBJ-dQ-g7I" firstAttribute="trailing" secondItem="3NL-ir-bxE" secondAttribute="trailing" id="aE1-z7-HL6"/>
+                            <constraint firstItem="3NL-ir-bxE" firstAttribute="leading" secondItem="pBJ-dQ-g7I" secondAttribute="leading" id="enl-3u-agp"/>
+                            <constraint firstItem="pBJ-dQ-g7I" firstAttribute="trailing" secondItem="imB-UQ-uzW" secondAttribute="trailing" constant="40" id="rQP-23-Pk9"/>
+                            <constraint firstItem="3NL-ir-bxE" firstAttribute="top" secondItem="D64-H4-1VJ" secondAttribute="top" id="whJ-ir-alt"/>
+                        </constraints>
+                    </view>
+                    <size key="freeformSize" width="375" height="812"/>
+                    <connections>
+                        <outlet property="collection" destination="3NL-ir-bxE" id="G2B-Qs-Bbt"/>
+                        <outlet property="pagecontrol" destination="z6f-6y-eXb" id="G7C-pT-Wca"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E61-i7-ni2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6678.8372093023254" y="-1602.3605150214594"/>
+        </scene>
         <!--Onboarding View Controller-->
         <scene sceneID="Yww-Ig-dgL">
             <objects>
@@ -64,6 +155,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Create Account"/>
+                                <connections>
+                                    <action selector="CreateButton:" destination="vdT-Yp-y8W" eventType="touchUpInside" id="GjL-sQ-dRt"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FjI-G6-f7a">
                                 <rect key="frame" x="16" y="681" width="343" height="56"/>
@@ -75,27 +169,34 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Login">
                                     <color key="baseForegroundColor" red="0.90588235294117647" green="0.94117647058823528" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="LoginButton:" destination="vdT-Yp-y8W" eventType="touchUpInside" id="azQ-PT-TEQ"/>
+                                </connections>
                             </button>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RPH-f2-PIM">
-                                <rect key="frame" x="0.0" y="59" width="375" height="753"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="RPH-f2-PIM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iNP-C6-mXf">
-                                    <size key="itemSize" width="375" height="756"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iNP-C6-mXf">
+                                    <size key="itemSize" width="375" height="797"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Ysg-uw-yp5">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="756"/>
+                                        <rect key="frame" x="0.0" y="7.666666666666667" width="375" height="797"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="G9W-k8-I8u">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="756"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="797"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="375" height="756"/>
+                                        <size key="customSize" width="375" height="797"/>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="vdT-Yp-y8W" id="TbL-0j-rGb"/>
+                                    <outlet property="delegate" destination="vdT-Yp-y8W" id="y59-qN-E49"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eNQ-Z1-6ZQ"/>
@@ -108,7 +209,7 @@
                             <constraint firstItem="RPH-f2-PIM" firstAttribute="leading" secondItem="eNQ-Z1-6ZQ" secondAttribute="leading" id="ROy-Fa-DC2"/>
                             <constraint firstItem="MRl-mK-hMb" firstAttribute="centerX" secondItem="eNQ-Z1-6ZQ" secondAttribute="centerX" id="ks0-hQ-bOX"/>
                             <constraint firstItem="MRl-mK-hMb" firstAttribute="centerY" secondItem="eNQ-Z1-6ZQ" secondAttribute="centerY" constant="153.5" id="pqm-oH-WWC"/>
-                            <constraint firstItem="RPH-f2-PIM" firstAttribute="top" secondItem="eNQ-Z1-6ZQ" secondAttribute="top" id="qGa-4P-T5O"/>
+                            <constraint firstItem="RPH-f2-PIM" firstAttribute="top" secondItem="8gO-P3-CC9" secondAttribute="top" id="qGa-4P-T5O"/>
                             <constraint firstItem="bao-od-XKh" firstAttribute="leading" secondItem="eNQ-Z1-6ZQ" secondAttribute="leading" constant="16" id="qsh-nV-8eT"/>
                             <constraint firstItem="FjI-G6-f7a" firstAttribute="top" secondItem="bao-od-XKh" secondAttribute="bottom" constant="8" symbolic="YES" id="whf-Im-gfB"/>
                             <constraint firstItem="eNQ-Z1-6ZQ" firstAttribute="trailing" secondItem="RPH-f2-PIM" secondAttribute="trailing" id="ySf-mw-JrI"/>
@@ -124,6 +225,7 @@
                     <size key="freeformSize" width="375" height="812"/>
                     <connections>
                         <outlet property="collection" destination="RPH-f2-PIM" id="6eR-as-34n"/>
+                        <outlet property="pageControl" destination="MRl-mK-hMb" id="Brh-o9-W60"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hXr-dm-yFx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
