--- a/Gopaddi/VC/Onboarding/OnboardingFirstCell.xib
+++ b/Gopaddi/VC/Onboarding/OnboardingFirstCell.xib
@@ -1,21 +1,98 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="OnboardingFirstCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingFirstCell" id="gTV-IL-0wX" customClass="OnboardingFirstCell" customModule="Gopaddi" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="271" height="496"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="271" height="496"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2h-NB-8mj">
+                        <rect key="frame" x="0.0" y="0.0" width="271" height="496"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding1" translatesAutoresizingMaskIntoConstraints="NO" id="QfF-hG-ob6">
+                                <rect key="frame" x="20" y="40" width="251" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="WZN-xV-dyZ"/>
+                                    <constraint firstAttribute="width" constant="251" id="axp-DY-HwC"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Gopaddi !!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSo-ap-2Ag">
+                                <rect key="frame" x="49.000000000000014" y="220" width="173.33333333333337" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="173.33000000000001" id="EfK-lE-lju"/>
+                                    <constraint firstAttribute="height" constant="26" id="gpE-Rh-LL8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bXn-wF-EvR">
+                                <rect key="frame" x="5" y="254.00000000000003" width="261" height="38.333333333333343"/>
+                                <string key="text">Welcome to Gopaddi, your one-stop shop for unforgettable travel experiences!  Dive into curated getaways, explore hidden gems, and unlock exclusive deals. Let's turn your travel dreams into memories that last a lifetime. Explore with us! </string>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="8"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="sQD-zi-RBW">
+                                <rect key="frame" x="0.0" y="396" width="271" height="100"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Onboarding2" translatesAutoresizingMaskIntoConstraints="NO" id="YG6-4Y-RUV">
+                                        <rect key="frame" x="0.0" y="0.0" width="271" height="50"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="EPd-2i-837">
+                                        <rect key="frame" x="0.0" y="50" width="271" height="50"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group" translatesAutoresizingMaskIntoConstraints="NO" id="8HS-I5-Lcw">
+                                                <rect key="frame" x="0.0" y="0.0" width="271" height="50"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="RZA-eJ-CvE"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.32941176470588235" blue="0.89411764705882346" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xSo-ap-2Ag" firstAttribute="top" secondItem="QfF-hG-ob6" secondAttribute="bottom" constant="30" id="9vW-xb-jgG"/>
+                            <constraint firstItem="xSo-ap-2Ag" firstAttribute="centerX" secondItem="x2h-NB-8mj" secondAttribute="centerX" id="CfN-Al-vNO"/>
+                            <constraint firstAttribute="trailing" secondItem="QfF-hG-ob6" secondAttribute="trailing" id="FaN-e7-qAP"/>
+                            <constraint firstItem="bXn-wF-EvR" firstAttribute="top" secondItem="xSo-ap-2Ag" secondAttribute="bottom" constant="8" id="ZO6-aE-2gA"/>
+                            <constraint firstAttribute="trailing" secondItem="bXn-wF-EvR" secondAttribute="trailing" constant="5" id="eqa-i4-1b9"/>
+                            <constraint firstAttribute="trailing" secondItem="sQD-zi-RBW" secondAttribute="trailing" id="h8l-Fk-fBi"/>
+                            <constraint firstItem="QfF-hG-ob6" firstAttribute="top" secondItem="x2h-NB-8mj" secondAttribute="top" constant="40" id="i0P-RV-mi9"/>
+                            <constraint firstItem="bXn-wF-EvR" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" constant="5" id="p95-YF-3V4"/>
+                            <constraint firstItem="sQD-zi-RBW" firstAttribute="leading" secondItem="x2h-NB-8mj" secondAttribute="leading" id="pI1-hd-frX"/>
+                            <constraint firstAttribute="bottom" secondItem="sQD-zi-RBW" secondAttribute="bottom" id="u9i-io-2CY"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="x2h-NB-8mj" secondAttribute="bottom" id="3zN-mp-RWr"/>
+                <constraint firstItem="x2h-NB-8mj" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="HDi-xu-C9d"/>
+                <constraint firstAttribute="trailing" secondItem="x2h-NB-8mj" secondAttribute="trailing" id="U10-YB-Dsn"/>
+                <constraint firstItem="x2h-NB-8mj" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="UOp-AQ-cT3"/>
+            </constraints>
+            <size key="customSize" width="271" height="496"/>
+            <point key="canvasLocation" x="-179.38931297709922" y="15.492957746478874"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="Group" width="430" height="81"/>
+        <image name="Onboarding1" width="380" height="210"/>
+        <image name="Onboarding2" width="430" height="110"/>
+    </resources>
 </document>
