--- a/Gopaddi/VC/Onboarding/OnboardingSecondCell.xib
+++ b/Gopaddi/VC/Onboarding/OnboardingSecondCell.xib
@@ -1,21 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="OnboardingSecondCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OnboardingSecondCell" id="gTV-IL-0wX" customClass="OnboardingSecondCell" customModule="Gopaddi" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="301" height="613"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="301" height="613"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ojl-ID-KA7">
+                        <rect key="frame" x="0.0" y="0.0" width="301" height="613"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 4" translatesAutoresizingMaskIntoConstraints="NO" id="lgZ-sF-7FP">
+                                <rect key="frame" x="50" y="0.0" width="201" height="350"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="350" id="GiD-3V-ge2"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ijj-yO-FRz">
+                                <rect key="frame" x="125.66666666666669" y="22" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="6Hc-5a-efH"/>
+                                    <constraint firstAttribute="height" constant="50" id="YTy-g8-anS"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ijj-yO-FRz" firstAttribute="centerY" secondItem="ojl-ID-KA7" secondAttribute="centerY" constant="-259.5" id="5Wu-yL-e3A"/>
+                            <constraint firstItem="ijj-yO-FRz" firstAttribute="centerX" secondItem="ojl-ID-KA7" secondAttribute="centerX" id="ArW-ee-Q03"/>
+                            <constraint firstItem="lgZ-sF-7FP" firstAttribute="top" secondItem="ojl-ID-KA7" secondAttribute="top" id="FP9-b2-Jyc"/>
+                            <constraint firstItem="lgZ-sF-7FP" firstAttribute="leading" secondItem="ojl-ID-KA7" secondAttribute="leading" constant="50" id="dSD-Ga-P72"/>
+                            <constraint firstItem="ijj-yO-FRz" firstAttribute="top" secondItem="ojl-ID-KA7" secondAttribute="top" constant="22" id="oGS-dF-qE5"/>
+                            <constraint firstAttribute="trailing" secondItem="lgZ-sF-7FP" secondAttribute="trailing" constant="50" id="v4E-v8-A3C"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="ojl-ID-KA7" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="4am-ca-V28"/>
+                <constraint firstAttribute="bottom" secondItem="ojl-ID-KA7" secondAttribute="bottom" id="Ly7-Yx-07k"/>
+                <constraint firstAttribute="trailing" secondItem="ojl-ID-KA7" secondAttribute="trailing" id="eCN-Qp-5eL"/>
+                <constraint firstItem="ojl-ID-KA7" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hQR-M4-LN8"/>
+            </constraints>
+            <size key="customSize" width="301" height="613"/>
+            <point key="canvasLocation" x="209.92366412213741" y="58.802816901408455"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="Group 4" width="352" height="503"/>
+        <image name="logo" width="100" height="97"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
